adiciona homepage e ghpages

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,30 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,400;1,700&display=swap');
+
+/* ________________________  */
+/* -------- colors --------  */
+
+:root {
+  --purple: #9792e3;
+  --white: #eeffec;
+  --green: #61e786;
+  --dark1: #181818;
+  --dark2: #222222;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
+body {
+  background-color: var(--dark1);
+  color: var(--white);
+  padding: 12px;
+  font-family: 'Roboto Mono';
+}
+
+a {
+  color: var(--white);
+  text-decoration: none;
 }
